# learn_cmake

./: README.md
learn_cmake1/: CMakeLists.txt  hello.cpp  hello.h  learn_cmake3.cpp  learn_cmake4.cpp  main.cpp
learn_cmake1/learn_1/: CMakeLists.txt  learn3.cpp  learn3.h  learn4.cpp  learn4.h
learn_cmake1/src/: learn1.cpp  learn1.h  learn2.cpp  learn2.h
learn_cmake2/: CMakeLists.txt
learn_cmake2/learn1/src/: learn1.cpp  learn1.h  learn2.cu  learn2.cuh
